# raft-rust-daemon

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  build-release.sh  install.sh
.github/workflows/: ci.yml
benches/: managers_bench.rs
src/: lib.rs  main.rs  test_env.rs
src/cli/: args.rs  commands.rs  mod.rs  raft_cli.rs
src/daemon/: computer.rs  mod.rs  paths.rs  pidfile.rs  proxy.rs  runner.rs  server.rs  trace.rs  update.rs  workspace.rs
src/daemon/agent/: manager.rs  mod.rs  process.rs  raft_client.rs
src/daemon/apm/: metrics.rs  mod.rs
src/daemon/message/: handler.rs  mod.rs
src/daemon/reminder/: manager.rs  mod.rs
src/daemon/runtime/: manager.rs  mod.rs
src/daemon/state/: mod.rs  state.rs  state_manager.rs
src/daemon/task/: manager.rs  mod.rs
src/models/: agent.rs  computer.rs  message.rs  mod.rs  reminder.rs  response.rs  runtime.rs  server.rs  task.rs
src/runtime/: mod.rs  runtime.rs
src/runtime/drivers/: builtin.rs  mod.rs  rusty.rs
tests/unit/: cli.rs  daemon.rs  main.rs  managers.rs  mod.rs  models.rs
