[package]
name = "raft-daemon"
version = "0.69.0"
edition = "2024"
rust-version = "1.85"
authors = ["Raft Contributors"]
description = "Rust-native daemon for agent lifecycle management, a port of @botiverse/raft-daemon"
license = "MIT"
repository = "https://github.com/PDG-Global/raft-rust-daemon"
homepage = "https://raft.build"
documentation = "https://docs.rs/raft-daemon"
readme = "README.md"
keywords = ["agent", "daemon", "raft", "cli", "runtime"]
categories = ["command-line-utilities", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "process", "signal", "socket2", "tracing"] }
tokio-tungstenite = { version = "0.24", features = ["__rustls-tls"] }
tokio-util = { version = "0.7", features = ["compat", "codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.26"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.32", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "local-offset", "macros"] }
sha2 = "0.10"
sha1 = "0.10"
md5 = { version = "0.7", features = ["std"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
url = { version = "2", features = ["serde"] }
regex = "1"
once_cell = "1"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
crossbeam = "0.8"
rand = "0.8"
rand_chacha = "0.3"
itertools = "0.14"
glob = "0.3"
globset = "0.4"
walkdir = "2"
globwalk = "0.8"
flate2 = "1"
tar = "0.4.46"
zip = { version = "2", features = ["deflate"] }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1"
pin-project = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["buffer", "limit"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "compression-zstd", "compression-br", "cors", "normalize-path", "timeout"] }
async-recursion = "1"
async-stream = "0.3"
dashmap = { version = "6", features = ["serde"] }
smallvec = "1"
indexmap = { version = "2", features = ["serde"] }
num_cpus = "1"
libc = "0.2"
socket2 = "0.5"
rustls = { version = "0.23", features = ["ring"] }
ring = "0.17"
pem = "3"
percent-encoding = "2"
form_urlencoded = "1"
mime = "0.3"
crc32fast = "1"
base64ct = "1.8.3"
const-random = "0.1.18"
getrandom = { version = "0.3", features = ["std"] }
cfg-if = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env", "unicode"] }
colored = "2"
indicatif = "0.18"
notify = { version = "8", features = ["macos_kqueue"] }
notify-debouncer-full = { version = "0.3" }
whoami = "1"
hostname = "0.4"
tempfile = "3"
which = "7"
aho-corasick = "1"
bstr = "1"
ignore = "0.4"
rusty-cli = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
criterion = "0.5"
pretty_assertions = "1"
insta = { version = "1", features = ["json", "redactions"] }

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "managers_bench"
harness = false

[features]
default = ["rusty-runtime"]
testing = []
local-trace = []
trace-upload = []
rusty-runtime = ["dep:rusty-cli"]
builtin-runtime = []

[[bin]]
name = "raft-daemon"
path = "src/main.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
await_holding_lock = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_lines = "allow"
type_complexity = "allow"
type_repetition_in_bounds = "allow"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
codegen-units = 16